Fix text alignment when reduce motion is active.

--- a/assets/base.css
+++ b/assets/base.css
@@ -2221,6 +2221,7 @@ input[type='checkbox'] {
     display: block;
     white-space: inherit;
     width: auto;
+    text-align: inherit;
     animation: none;
     text-shadow: none;
   }
